--- a/SubEthaEdit-Mac/English.lproj/OpenPanelAccessory.xib
+++ b/SubEthaEdit-Mac/English.lproj/OpenPanelAccessory.xib
@@ -1,22 +1,23 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4514" systemVersion="13C32" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
         <deployment defaultVersion="1090" identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="4514"/>
     </dependencies>
     <objects>
-        <customObject id="-2" userLabel="File's Owner" customClass="DocumentController">
+        <customObject id="-2" userLabel="File's Owner" customClass="SEEOpenPanelAccessoryViewController">
             <connections>
-                <outlet property="O_encodingPopUpButton" destination="92" id="101"/>
-                <outlet property="O_goIntoBundlesCheckbox" destination="104" id="107"/>
-                <outlet property="O_modePopUpButton" destination="97" id="100"/>
                 <outlet property="O_openPanelAccessoryView" destination="88" id="99"/>
-                <outlet property="O_showHiddenFilesCheckbox" destination="115" id="117"/>
+                <outlet property="encodingPopUpButtonOutlet" destination="92" id="hCj-Pv-G0k"/>
+                <outlet property="goIntoBundlesCheckboxOutlet" destination="104" id="Tfd-m2-bA6"/>
+                <outlet property="modePopUpButtonOutlet" destination="97" id="B4G-xV-pIg"/>
+                <outlet property="showHiddenFilesCheckboxOutlet" destination="115" id="dCA-zW-HaA"/>
+                <outlet property="view" destination="88" id="72e-8b-Ajn"/>
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application"/>
-        <customView autoresizesSubviews="NO" id="88" userLabel="View">
+        <customView autoresizesSubviews="NO" id="88" userLabel="OpenPanel Accessory View">
             <rect key="frame" x="0.0" y="0.0" width="392" height="134"/>
             <autoresizingMask key="autoresizingMask"/>
             <subviews>
@@ -28,7 +29,7 @@
                         <font key="font" metaFont="system"/>
                     </buttonCell>
                     <connections>
-                        <action selector="showHiddenFiles:" target="-2" id="116"/>
+                        <action selector="showHiddenFiles:" target="-2" id="oJF-sv-Lyu"/>
                     </connections>
                 </button>
                 <button id="104">
@@ -39,7 +40,7 @@
                         <font key="font" metaFont="system"/>
                     </buttonCell>
                     <connections>
-                        <action selector="goIntoBundles:" target="-2" id="108"/>
+                        <action selector="goIntoBundles:" target="-2" id="AzR-nQ-s26"/>
                     </connections>
                 </button>
                 <textField verticalHuggingPriority="750" id="91">
