--- a/SubEthaEdit-Mac/German.lproj/OpenPanelAccessory.xib
+++ b/SubEthaEdit-Mac/German.lproj/OpenPanelAccessory.xib
@@ -1,21 +1,22 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4514" systemVersion="13C32" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="4514"/>
     </dependencies>
     <objects>
-        <customObject id="-2" userLabel="File's Owner" customClass="DocumentController">
+        <customObject id="-2" userLabel="File's Owner" customClass="SEEOpenPanelAccessoryViewController">
             <connections>
-                <outlet property="O_encodingPopUpButton" destination="92" id="101"/>
-                <outlet property="O_goIntoBundlesCheckbox" destination="104" id="107"/>
-                <outlet property="O_modePopUpButton" destination="97" id="100"/>
                 <outlet property="O_openPanelAccessoryView" destination="88" id="99"/>
-                <outlet property="O_showHiddenFilesCheckbox" destination="115" id="117"/>
+                <outlet property="encodingPopUpButtonOutlet" destination="92" id="T1D-sc-oig"/>
+                <outlet property="goIntoBundlesCheckboxOutlet" destination="104" id="8lz-eD-f32"/>
+                <outlet property="modePopUpButtonOutlet" destination="97" id="XKg-ex-qYm"/>
+                <outlet property="showHiddenFilesCheckboxOutlet" destination="115" id="e6u-2r-YT8"/>
+                <outlet property="view" destination="88" id="h7M-lP-sva"/>
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application"/>
-        <customView autoresizesSubviews="NO" id="88" userLabel="View">
+        <customView autoresizesSubviews="NO" id="88" userLabel="OpenPanel Acessory View">
             <rect key="frame" x="0.0" y="0.0" width="406" height="132"/>
             <autoresizingMask key="autoresizingMask"/>
             <subviews>
@@ -27,7 +28,7 @@
                         <font key="font" metaFont="system"/>
                     </buttonCell>
                     <connections>
-                        <action selector="showHiddenFiles:" target="-2" id="116"/>
+                        <action selector="showHiddenFiles:" target="-2" id="ORA-uC-yBx"/>
                     </connections>
                 </button>
                 <button id="104">
@@ -38,7 +39,7 @@
                         <font key="font" metaFont="system"/>
                     </buttonCell>
                     <connections>
-                        <action selector="goIntoBundles:" target="-2" id="108"/>
+                        <action selector="goIntoBundles:" target="-2" id="gbH-bg-TB8"/>
                     </connections>
                 </button>
                 <textField verticalHuggingPriority="750" id="91">
@@ -53,12 +54,12 @@
                 <popUpButton toolTip="Öffne Datei mit dem ausgewählten Modus" verticalHuggingPriority="750" id="97" customClass="DocumentModePopUpButton">
                     <rect key="frame" x="125" y="46" width="264" height="26"/>
                     <autoresizingMask key="autoresizingMask"/>
-                    <popUpButtonCell key="cell" type="push" title="Item1" bezelStyle="rounded" alignment="left" lineBreakMode="clipping" state="on" borderStyle="borderAndBezel" inset="2" arrowPosition="arrowAtCenter" preferredEdge="maxY" selectedItem="96" id="122">
+                    <popUpButtonCell key="cell" type="push" bezelStyle="rounded" alignment="left" lineBreakMode="clipping" borderStyle="borderAndBezel" inset="2" arrowPosition="arrowAtCenter" preferredEdge="maxY" id="122">
                         <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
                         <font key="font" metaFont="menu"/>
                         <menu key="menu" title="OtherViews" id="95">
                             <items>
-                                <menuItem title="Item1" state="on" id="96"/>
+                                <menuItem title="Item1" id="96"/>
                             </items>
                         </menu>
                     </popUpButtonCell>
@@ -75,12 +76,12 @@
                 <popUpButton toolTip="Wähle die Kodierung der Datei" verticalHuggingPriority="750" id="92" customClass="EncodingPopUpButton">
                     <rect key="frame" x="125" y="16" width="264" height="26"/>
                     <autoresizingMask key="autoresizingMask"/>
-                    <popUpButtonCell key="cell" type="push" title="Item1" bezelStyle="rounded" alignment="left" lineBreakMode="clipping" state="on" borderStyle="border" inset="2" arrowPosition="arrowAtCenter" preferredEdge="maxY" selectedItem="98" id="121">
+                    <popUpButtonCell key="cell" type="push" bezelStyle="rounded" alignment="left" lineBreakMode="clipping" borderStyle="border" inset="2" arrowPosition="arrowAtCenter" preferredEdge="maxY" id="121">
                         <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                         <font key="font" metaFont="menu"/>
                         <menu key="menu" title="OtherViews" id="93">
                             <items>
-                                <menuItem title="Item1" state="on" id="98"/>
+                                <menuItem title="Item1" id="98"/>
                             </items>
                         </menu>
                     </popUpButtonCell>
