--- a/SubEthaEdit-Mac/English.lproj/SavePanelAccessory.xib
+++ b/SubEthaEdit-Mac/English.lproj/SavePanelAccessory.xib
@@ -1,25 +1,23 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4514" systemVersion="13C32" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="4514"/>
     </dependencies>
     <objects>
-        <customObject id="-2" userLabel="File's Owner" customClass="PlainTextDocument">
+        <customObject id="-2" userLabel="File's Owner" customClass="SEESavePanelAccessoryViewController">
             <connections>
-                <outlet property="O_encodingPopUpButton" destination="92" id="102"/>
-                <outlet property="O_goIntoBundlesCheckbox" destination="105" id="106"/>
-                <outlet property="O_goIntoBundlesCheckbox2" destination="109" id="111"/>
-                <outlet property="O_savePanelAccessoryFileFormatMatrix" destination="126" id="140"/>
-                <outlet property="O_savePanelAccessoryFileFormatMatrix2" destination="132" id="141"/>
-                <outlet property="O_savePanelAccessoryView" destination="88" id="103"/>
-                <outlet property="O_savePanelAccessoryView2" destination="108" id="112"/>
-                <outlet property="O_showHiddenFilesCheckbox" destination="115" id="116"/>
-                <outlet property="O_showHiddenFilesCheckbox2" destination="113" id="114"/>
+                <outlet property="encodingPopUpButtonOutlet" destination="92" id="CgW-2E-M6B"/>
+                <outlet property="savePanelAccessoryFileFormatMatrixOutlet" destination="132" id="RqA-m4-1T0"/>
+                <outlet property="savePanelAccessoryOutlet" destination="108" id="PFD-0B-XH0"/>
+                <outlet property="savePanelProxy" destination="MLu-4L-KpT" id="7KM-C4-cCA"/>
+                <outlet property="saveToPanelAccessoryFileFormatMatrixOutlet" destination="126" id="AoA-AA-pY2"/>
+                <outlet property="saveToPanelAccessoryOutlet" destination="88" id="WO5-Sg-1F6"/>
+                <outlet property="view" destination="108" id="bT9-62-3f5"/>
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application"/>
-        <customView id="88" userLabel="View">
+        <customView id="88" userLabel="SaveTo Accessory View">
             <rect key="frame" x="0.0" y="0.0" width="392" height="181"/>
             <autoresizingMask key="autoresizingMask"/>
             <subviews>
@@ -84,7 +82,7 @@
                         <font key="font" metaFont="system"/>
                     </buttonCell>
                     <connections>
-                        <action selector="showHiddenFiles:" target="-2" id="117"/>
+                        <binding destination="MLu-4L-KpT" name="value" keyPath="selection.showsHiddenFiles" id="1B9-e7-kw3"/>
                     </connections>
                 </button>
                 <button id="105">
@@ -95,7 +93,7 @@
                         <font key="font" metaFont="system"/>
                     </buttonCell>
                     <connections>
-                        <action selector="goIntoBundles:" target="-2" id="107"/>
+                        <binding destination="MLu-4L-KpT" name="value" keyPath="selection.treatsFilePackagesAsDirectories" id="ija-6Q-TUy"/>
                     </connections>
                 </button>
                 <textField verticalHuggingPriority="750" id="90">
@@ -122,7 +120,7 @@
                 </popUpButton>
             </subviews>
         </customView>
-        <customView id="108" userLabel="View1">
+        <customView id="108" userLabel="Save Accessory View">
             <rect key="frame" x="0.0" y="0.0" width="369" height="152"/>
             <autoresizingMask key="autoresizingMask"/>
             <subviews>
@@ -187,7 +185,7 @@
                         <font key="font" metaFont="system"/>
                     </buttonCell>
                     <connections>
-                        <action selector="showHiddenFiles:" target="-2" id="118"/>
+                        <binding destination="MLu-4L-KpT" name="value" keyPath="selection.showsHiddenFiles" id="5Z6-yF-XHv"/>
                     </connections>
                 </button>
                 <button id="109">
@@ -198,10 +196,11 @@
                         <font key="font" metaFont="system"/>
                     </buttonCell>
                     <connections>
-                        <action selector="goIntoBundles:" target="-2" id="110"/>
+                        <binding destination="MLu-4L-KpT" name="value" keyPath="selection.treatsFilePackagesAsDirectories" id="ZGg-5S-aJV"/>
                     </connections>
                 </button>
             </subviews>
         </customView>
+        <objectController id="MLu-4L-KpT" userLabel="SavePanel Proxy"/>
     </objects>
 </document>
