--- a/SubEthaEdit-Mac/German.lproj/PlainTextEditor.xib
+++ b/SubEthaEdit-Mac/German.lproj/PlainTextEditor.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4514" systemVersion="13C39" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="4514"/>
     </dependencies>
@@ -27,7 +27,17 @@
             <rect key="frame" x="0.0" y="0.0" width="409" height="290"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <customView autoresizesSubviews="NO" id="28" customClass="CandyBarView">
+                <customView autoresizesSubviews="NO" id="6" userLabel="Placeholder Scroll View" customClass="NSScrollView">
+                    <rect key="frame" x="0.0" y="0.0" width="409" height="290"/>
+                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                    <subviews>
+                        <customView id="A2n-hn-i1e">
+                            <rect key="frame" x="0.0" y="160" width="163" height="96"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                        </customView>
+                    </subviews>
+                </customView>
+                <customView autoresizesSubviews="NO" id="28" userLabel="Bottom Blurred View" customClass="RMBlurredView">
                     <rect key="frame" x="0.0" y="0.0" width="409" height="17"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                     <subviews>
@@ -68,7 +78,7 @@
                         </textField>
                     </subviews>
                 </customView>
-                <customView autoresizesSubviews="NO" id="27" customClass="CandyBarView">
+                <customView autoresizesSubviews="NO" id="27" userLabel="Top Blurred View" customClass="RMBlurredView">
                     <rect key="frame" x="0.0" y="273" width="409" height="17"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                     <subviews>
@@ -111,20 +121,8 @@
                         </imageView>
                     </subviews>
                 </customView>
-                <customView autoresizesSubviews="NO" id="6" customClass="NSScrollView">
-                    <rect key="frame" x="0.0" y="17" width="409" height="256"/>
-                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                </customView>
             </subviews>
         </customView>
-        <view autoresizesSubviews="NO" id="74">
-            <rect key="frame" x="0.0" y="0.0" width="125" height="1"/>
-            <autoresizingMask key="autoresizingMask"/>
-        </view>
-        <view autoresizesSubviews="NO" id="8">
-            <rect key="frame" x="0.0" y="0.0" width="125" height="1"/>
-            <autoresizingMask key="autoresizingMask"/>
-        </view>
     </objects>
     <resources>
         <image name="WaitPipe" width="13" height="12"/>
