--- a/SubEthaEdit-Mac/German.lproj/PlainTextEditor.xib
+++ b/SubEthaEdit-Mac/German.lproj/PlainTextEditor.xib
@@ -23,7 +23,7 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application"/>
-        <customView autoresizesSubviews="NO" id="5" userLabel="EditorView">
+        <customView autoresizesSubviews="NO" wantsLayer="YES" id="5" userLabel="EditorView">
             <rect key="frame" x="0.0" y="0.0" width="409" height="290"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
