--- a/SubEthaEdit-Mac/English.lproj/PlainTextEditor.xib
+++ b/SubEthaEdit-Mac/English.lproj/PlainTextEditor.xib
@@ -21,6 +21,7 @@
                 <outlet property="O_waitPipeStatusImageView" destination="68" id="69"/>
                 <outlet property="O_windowWidthTextField" destination="15" id="21"/>
                 <outlet property="O_writtenByTextField" destination="25" id="31"/>
+                <outlet property="shareInviteUsersButtonOutlet" destination="bv6-mv-CIq" id="hQV-kB-VvW"/>
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
@@ -125,7 +126,7 @@
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         </customView>
                         <customView autoresizesSubviews="NO" toolTip="File encoding" id="77" customClass="PopUpButton">
-                            <rect key="frame" x="204" y="0.0" width="151" height="17"/>
+                            <rect key="frame" x="204" y="0.0" width="101" height="17"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                         </customView>
                         <customView autoresizesSubviews="NO" toolTip="Document mode" id="75" customClass="PopUpButton">
@@ -139,6 +140,37 @@
                             <color key="fillColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             <font key="titleFont" metaFont="system"/>
                         </box>
+                        <button id="7Mi-Cu-bLB">
+                            <rect key="frame" x="306" y="0.0" width="17" height="17"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
+                            <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="Announce" imagePosition="only" alignment="center" alternateImage="Conceal" controlSize="mini" imageScaling="proportionallyDown" inset="2" id="4l5-Nu-6M1">
+                                <behavior key="behavior" lightByBackground="YES" lightByGray="YES" changeBackground="YES" changeGray="YES"/>
+                                <font key="font" metaFont="miniSystem"/>
+                            </buttonCell>
+                            <connections>
+                                <action selector="toggleIsAnnounced:" target="-1" id="IJN-40-Y5s"/>
+                                <outlet property="menu" destination="eH3-RU-uKl" id="H3t-Aa-F1C"/>
+                            </connections>
+                        </button>
+                        <button id="OwG-YH-zbO">
+                            <rect key="frame" x="322" y="0.0" width="17" height="17"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
+                            <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="NSEveryone" imagePosition="only" alignment="center" controlSize="mini" imageScaling="proportionallyDown" inset="2" id="tKL-KY-Fjg">
+                                <behavior key="behavior" lightByBackground="YES" lightByGray="YES" changeBackground="YES" changeGray="YES"/>
+                                <font key="font" metaFont="miniSystem"/>
+                            </buttonCell>
+                        </button>
+                        <button id="bv6-mv-CIq">
+                            <rect key="frame" x="338" y="0.0" width="17" height="17"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
+                            <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="NSShareTemplate" imagePosition="only" alignment="center" imageScaling="proportionallyDown" inset="2" id="HOp-Np-jFU">
+                                <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES" changeBackground="YES" changeGray="YES"/>
+                                <font key="font" metaFont="system"/>
+                            </buttonCell>
+                            <connections>
+                                <action selector="inviteUsersToDocumentViaSharingService:" target="-1" id="Wdv-mH-git"/>
+                            </connections>
+                        </button>
                         <textField toolTip="Window width and wrap settings" verticalHuggingPriority="750" id="15" customClass="BorderedTextField">
                             <rect key="frame" x="352" y="0.0" width="40" height="16"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
@@ -166,8 +198,34 @@
                 </customView>
             </subviews>
         </customView>
+        <menu id="eH3-RU-uKl" userLabel="Announce Context Menu">
+            <items>
+                <menuItem title="Read / Write" tag="2" id="KIH-pg-Ei8">
+                    <modifierMask key="keyEquivalentModifierMask"/>
+                    <connections>
+                        <action selector="changePendingUsersAccess:" target="-1" id="Axd-3F-CbN"/>
+                    </connections>
+                </menuItem>
+                <menuItem title="Read only" tag="1" id="83X-QV-Pku">
+                    <modifierMask key="keyEquivalentModifierMask"/>
+                    <connections>
+                        <action selector="changePendingUsersAccess:" target="-1" id="Inv-Si-3OU"/>
+                    </connections>
+                </menuItem>
+                <menuItem title="Locked" id="Dhd-iR-fKx">
+                    <modifierMask key="keyEquivalentModifierMask"/>
+                    <connections>
+                        <action selector="changePendingUsersAccess:" target="-1" id="EGO-3D-nSQ"/>
+                    </connections>
+                </menuItem>
+            </items>
+        </menu>
     </objects>
     <resources>
+        <image name="Announce" width="128" height="128"/>
+        <image name="Conceal" width="32" height="32"/>
+        <image name="NSEveryone" width="32" height="32"/>
+        <image name="NSShareTemplate" width="18" height="16"/>
         <image name="SplitClose" width="15" height="15"/>
         <image name="SplitOpen" width="15" height="15"/>
         <image name="WaitPipe" width="13" height="12"/>
